network/OrCondition.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np1
  namespace: venus
spec:
  podSelector:
    matchLabels:
      id: frontend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          id: api
  - ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53

# Notice that we specify two egress rules in the yaml above. If we specify multiple egress rules then these are connected using a logical OR. So in the example above we do:

# allow outgoing traffic if
#   (destination pod has label id:api) OR ((port is 53 UDP) OR (port is 53 TCP))
# Let's have a look at example code which wouldn't work in our case:

# # this example does not work in our case
# ...
#   egress:
#   - to:                     # 1st AND ONLY egress rule
#     - podSelector:            # allow egress only to pods with api label
#         matchLabels:
#           id: api
#     ports:                  # STILL THE SAME RULE but just an additional selector
#     - port: 53                # allow DNS UDP
#       protocol: UDP
#     - port: 53                # allow DNS TCP
#       protocol: TCP
# In the yaml above we only specify one egress rule with two selectors. It can be translated into:

# allow outgoing traffic if
#   (destination pod has label id:api) AND ((port is 53 UDP) OR (port is 53 TCP))
